      \item
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item
    }
  }
}

\section{CHANGES IN VERSION xx.xx.xx}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item 
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item Remove the experimental status of \code{inla.posterior.sample.eval}
    }
  }
  \subsection{NEW EXPERIMENTAL FEATURES}{
    \itemize{
      \item
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Add check for \code{NA/NaN/Inf} in mesh creation input
      ocations
      \item Make sure that skewness is not to high in \code{inla.posterior.sample}
    }
  }
}

\section{CHANGES IN VERSION 20.04.18}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Added new argument \code{tag} to \code{inla.coxph}
    }
  }
  \subsection{NEW EXPERIMENTAL FEATURES}{
    \itemize{
      \item \code{inla.rjmarginal.eval}, to evaluate samples from a join
      approximations
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Names of samples are now "sample:1", "sample:2", and should
      be coherent over all functions. Similar, their contents, its like
      "x:1", "x:2", etc.
      \item Fixed a bug setting prior for the log baseline hazard in \code{inla.coxph}
    }
  }
}

\section{CHANGES IN VERSION 20.04.14}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Small fix so that \code{result$mode$x} is written out in the
      case where \code{nhyper=0} and \code{num_threads>1}
      \item Minor internal changes.
    }
  }
}

\section{CHANGES IN VERSION 20.04.06}{
  \subsection{NEW EXPERIMENTAL FEATURES}{
    \itemize{
      \item Added link \code{loga}. Not yet documented.
      \item First try on a new feature to more easily approximate
      the joint marginal for a subset of the latent field. This is a new
      option \code{selection} and corresponding \code{inla.rjmarginal()}
      to sample from it. 
    }
  }
  \subsection{BUG FIXES}{
    \itemize{