@@ -230,6 +230,7 @@ export(inla.posterior.sample)
 export(inla.posterior.sample.eval)
 S3method(print, inla)
 export(inla.priors.used)
+export(inla.prune)
 export(inla.qstat)
 export(inla.qdel)
 export(inla.qget)
